--- a/myApplications.html
+++ b/myApplications.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Applications</title>
   <link rel="stylesheet" href="css/myApplications.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="sidebar">
@@ -32,6 +31,6 @@
   <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-firestore.js"></script>
   <!-- My Applications Script -->
-  <script type="module" src="js/myApplications.js"></script>
+  <script type="module" src="myApplications.js"></script>
 </body>
 </html>
