--- a/studentPortal.html
+++ b/studentPortal.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Dashboard</title>
     <link rel="stylesheet" href="css/studentPortal.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="sidebar">
@@ -38,6 +37,6 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-firestore.js"></script>
-    <script type="module" src="js/adminPortal.js"></script>
+    <script type="module" src="studentPortal.js"></script>
 </body>
 </html>
