--- a/signIn.html
+++ b/signIn.html
@@ -6,21 +6,8 @@
     <title>Sign In</title>
     <link rel="stylesheet" href="css/signIn.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-left">
-          <a href="index.html">
-            <img src="assets/logo.webp" alt="Logo Click" width="100">
-        </a>
-        </div>
-        <div class="navbar-right">
-          <a href="#employee-login">Employee Login</a>
-          <a href="signIn.html">Login</a>
-          <a href="signUp.html" class="cta-button">Get Started</a>
-        </div>
-      </nav>
     <div class="container" id="signIn">
         <h1 class="form-title">Sign In</h1>
         <form>
@@ -41,6 +28,6 @@
             <p>Don't have an account? <a href="signUp.html">Sign Up</a></p>
         </div>
     </div>
-    <script src="js/signIn.js" type="module"></script>
+    <script src="signIn.js" type="module"></script>
 </body>
 </html>
