--- a/viewApplications.html
+++ b/viewApplications.html
@@ -70,6 +70,6 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-firestore.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js"></script>
-    <script type="module" src="viewApplications.js"></script>
+    <script type="module" src="js/viewApplications.js"></script>
 </body>
 </html>
