--- a/signIn.html
+++ b/signIn.html
@@ -28,6 +28,6 @@
             <p>Don't have an account? <a href="signUp.html">Sign Up</a></p>
         </div>
     </div>
-    <script src="signIn.js" type="module"></script>
+    <script src="js/signIn.js" type="module"></script>
 </body>
 </html>
