--- a/signUp.html
+++ b/signUp.html
@@ -65,6 +65,6 @@
             <p>Already have an account? <a href="signIn.html">Sign In</a></p>
         </div>
     </div>
-    <script src="signUp.js" type="module"></script>
+    <script src="js/signUp.js" type="module"></script>
 </body>
 </html>
