--- a/studentPortal.html
+++ b/studentPortal.html
@@ -37,6 +37,6 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-firestore.js"></script>
-    <script type="module" src="studentPortal.js"></script>
+    <script type="module" src="js/studentPortal.js"></script>
 </body>
 </html>
