--- a/myApplications.html
+++ b/myApplications.html
@@ -31,6 +31,6 @@
   <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-firestore.js"></script>
   <!-- My Applications Script -->
-  <script type="module" src="myApplications.js"></script>
+  <script type="module" src="js/myApplications.js"></script>
 </body>
 </html>
