--- a/apply.html
+++ b/apply.html
@@ -65,7 +65,7 @@
         </form>
         <p class="note">Your employer will contact you with the next steps.</p>
     </div>
-<script type ="module"src="apply.js"></script>
+<script type ="module"src="js/apply.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const form = document.getElementById("applyForm");
