--- a/signUp.html
+++ b/signUp.html
@@ -6,8 +6,21 @@
     <title>Sign Up</title>
     <link rel="stylesheet" href="css/signIn.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="navbar-left">
+          <a href="index.html">
+            <img src="assets/logo.webp" alt="Logo Click" width="100">
+        </a>
+        </div>
+        <div class="navbar-right">
+          <a href="#employee-login">Employee Login</a>
+          <a href="signIn.html">Login</a>
+          <a href="signUp.html" class="cta-button">Get Started</a>
+        </div>
+      </nav>
     <div class="container" id="signup">
         <h1 class="form-title">Sign Up</h1>
         <form>
